// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle the submit event and close the modal 1`] = `
Array [
  Array [
    Object {
      "avatar": "",
      "groupCount": 3,
      "login": "admin",
      "name": "Admin Istrator",
    },
    Array [
      "7",
    ],
    Array [
      "11",
    ],
  ],
]
`;

exports[`should correctly handle the submit event and close the modal 2`] = `
Object {
  "loading": false,
  "userGroups": Object {
    "11": Object {
      "default": false,
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
      "status": "remove",
    },
    "7": Object {
      "status": "add",
    },
  },
}
`;

exports[`should correctly select the groups 1`] = `
Object {
  "11": Object {
    "default": false,
    "description": "Technical accounts",
    "id": 11,
    "name": "pull-request-analysers",
    "selected": true,
    "status": "remove",
  },
  "7": Object {
    "status": "add",
  },
}
`;

exports[`should render 1`] = `
<SimpleModal
  header="organization.members.manage_groups"
  onClose={[MockFunction]}
  onSubmit={[Function]}
>
  <Component />
</SimpleModal>
`;

exports[`should render 2`] = `
<Modal
  contentLabel="organization.members.manage_groups"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        organization.members.manage_groups
      </h2>
    </header>
    <div
      className="modal-body modal-container"
    >
      <p>
        <strong>
          organization.members.members_groups.Admin Istrator
        </strong>
      </p>
      <DeferredSpinner
        className="spacer-top"
        timeout={100}
      />
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        disabled={true}
      >
        save
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
